footer added hours fixed look on mobile

--- a/src/Components/HomeSplash.css
+++ b/src/Components/HomeSplash.css
@@ -62,7 +62,8 @@
 }
 
 .blcDesc {
-    font-size: 24px;
+    font-size: 21px;
+    font-weight: 600;
 }
 
 @media screen and (max-width: 1064px) {
